Manifest/Monitoring/dashboard/p-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/acme-challenge-type: "http01"	
    cert-manager.io/cluster-issuer: "letsencrypt-dashboard"
spec:
  rules:
## Service Location n Characters
  - host: dashboard.ical.host
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
  tls:
    - hosts:
      - dashboard.ical.host
      secretName: dashboard-tls
